@@ -12,11 +12,10 @@
 	 * undo it later.  UGH!
 	 */
 	pseudo_debug(1, "client resetting for clone(2) call\n");
-	if (!pseudo_get_value("PSEUDO_RELOADED")) {
-		pseudo_setupenv();
+	pseudo_setupenv();
+	if (!pseudo_get_value("PSEUDO_UNLOAD")) {
 		pseudo_reinit_libpseudo();
 	} else {
-		pseudo_setupenv();
 		pseudo_dropenv();
 	}
 	/* call the real syscall */
